@@ -60,8 +60,7 @@ public class BeanMappingTest {
         tD.setPrerequisities(new String[]{"p1", "p2"});
         tD.setOutcomes(new String[]{"o1", "o2"});
         tD.setState(TDState.RELEASED);
-        tD.setAuthors(new HashSet<>(Arrays.asList(aR)));
-        tD.setSandboxDefinitionRefId(1L);
+        tD.setAuthors(new HashSet<>(List.of(aR)));
         tD.setShowStepperBar(true);
 
         tDDTO = new TrainingDefinitionByIdDTO();
@@ -71,7 +70,6 @@ public class BeanMappingTest {
         tDDTO.setPrerequisities(new String[]{"p1", "p2"});
         tDDTO.setOutcomes(new String[]{"o1", "o2"});
         tDDTO.setState(cz.muni.ics.kypo.training.api.enums.TDState.UNRELEASED);
-        tDDTO.setSandboxDefinitionRefId(1L);
         tDDTO.setShowStepperBar(true);
 
         iL1 = new InfoLevel();
@@ -118,7 +116,6 @@ public class BeanMappingTest {
         assertEquals(tD.getPrerequisities()[1], dto.getPrerequisities()[1]);
         assertEquals(tD.getOutcomes()[0], dto.getOutcomes()[0]);
         assertEquals(tD.getOutcomes()[1], dto.getOutcomes()[1]);
-        assertEquals(tD.getSandboxDefinitionRefId(), dto.getSandboxDefinitionRefId());
         assertEquals(tD.isShowStepperBar(), dto.isShowStepperBar());
     }
 
@@ -134,7 +131,6 @@ public class BeanMappingTest {
         assertEquals(tDDTO.getPrerequisities()[1], tD.getPrerequisities()[1]);
         assertEquals(tDDTO.getOutcomes()[0], tD.getOutcomes()[0]);
         assertEquals(tDDTO.getOutcomes()[1], tD.getOutcomes()[1]);
-        assertEquals(tDDTO.getSandboxDefinitionRefId(), tD.getSandboxDefinitionRefId());
         assertEquals(tDDTO.isShowStepperBar(), tD.isShowStepperBar());
     }
 
